<resources>

    <string name="app_name">ElderAssist</string>
    <string name="app_title">ElderAssist</string>
    <string name="introduction_text">Welcome to ElderAssist, your companion for effortless navigation, communication, and health tracking!</string>
    <string name="welcome_message">Explore tutorials, maps, medication scan and AI Chat designed to simplify your daily life.</string>
    <string name="image1_desc">Illustration of navigating with maps</string>
    <string name="image2_desc">Tutorial example for sending text messages</string>
    <string name="featured_section_title">Explore Features</string>
    <string name="featured_item_1">💡 Tip: Use the "Scan" button to capture and analyze information on the go.</string>
    <string name="featured_item_2">🗺️ Navigate seamlessly with the integrated map to find your desired locations.</string>
    <string name="featured_item_3">🎥 Tutorials: Access helpful videos on essential tools and services directly within the app.</string>
    <string name="featured_item_4">📞 Chat: Instantly connect with our assistant for help and support.</string>
    <string name="search_hint">Search</string>
    <string name="cancel">Cancel</string>
    <string name="tutorial_videos">Tutorial Videos</string>
    <string name="search">Search</string>
    <string name="tutorials_title">ElderAssist Video</string>
    <string name="home_button_desc">Navigate to Home</string>
    <string name="videos_button_desc">Navigate to Videos</string>
    <string name="blogs_button_desc">Navigate to Blogs</string>
    <string name="profile_button_desc">Navigate to Profile</string>
    <string name="settings_button_desc">Navigate to Settings</string>
    <string name="chat_input_hint">Type your message</string>
    <string name="chat_send_button">Send</string>
    <string name="faq_title">Frequently Asked Questions</string>
    <string name="chat_welcome_message">Welcome to use ElderAssist AI Chat! I am ChatElder. How can I help you today?</string>
    <string name="faq_question_1">1.How do I find medication Information?</string>
    <string name="faq_question_2">2.Can you show me a travel plan for this year?</string>
    <string name="faq_question_3">3.What customer support options are available?</string>
    <string name='back_button_label'>back</string>

    <string name="username_hint">Enter Your Email Address Here</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_button">Log In</string>
    <string name="userPasswdKV">com.cs407.elderassist_tutorial.userPasswdKV</string>
    <string name="fail_login">Need to Sign Up or Wrong Username or Password</string>
    <string name="login_screen">LoginScreen</string>
    <string name="note_list_screen">NoteListScreen</string>
    <string name="note_database">noteDatabase</string>
    <string name="note_content_screen">NoteContentScreen</string>
    <string name="save_button">Save</string>
    <string name="logout">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="greeting_text">Hey, %1$s!</string>
    <string name="age_text">Age: %1$d</string>
    <string name="loc_text">Location: %1$s</string>
    <string name="oth_text">%1$s</string>
    <string name="welcome">Welcome Back</string>
    <string name="elder_a">ElderAssist</string>
    <string name="create_account">New to ElderAssist? Create your account from below.</string>
    <string name="image_description">logo</string>
    <string name="signup">Sign Up</string>
    <string name="createtext">Create Your Account Here</string>
    <string name="link">Create account</string>
    <string name="edit_user_info_screen">edit user info screen</string>
    <string name="map_button_desc">Navigate to Map</string>


    <string name="text">Text</string>
    <string name="preview">Preview</string>
    <string name="camera">Camera</string>
    <string name="recognizing_text_error">Recognizing Text error.</string>
    <string name="detecting_face_error">Detecting Face error.</string>
    <string name="labeling_image_error">Labeling Image error.</string>
    <string name="camera_button_description">这是啥</string>
    <string name="tutorial_button">Tutorial Button</string>
    <string name="tutorial">Tutorial</string>
    <string name="map_button">Map Button</string>
    <string name="scan_button">Scan Button</string>
    <string name="scan">Scan</string>
    <string name="chat_button">Chat Button</string>
    <string name="chat">Chat</string>
    <string name="me_button">Me Button</string>
    <string name="me">Me</string>
    <string name="loading_weather">Loading weather...</string>
    <string name="elderassist">ElderAssist</string>
    <string name="welcome_image" />
    <string name="map">Map</string>
    <string name="chat_name">ChatElder</string>

    <string name="saved_locations">Saved Locations</string>
    <string name="nearby_pharmacies">Nearby Pharmacies</string>FF
    />


</resources>