<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="85dp" />


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="85dp" />


        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="27dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/wechatimg4272"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/elder_assist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/elder_a"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/myImageView"
            app:layout_constraintTop_toTopOf="@+id/myImageView" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/createtext"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/elder_assist" />

    <EditText
        android:id="@+id/sigupusernameEditText"
        android:layout_width="282dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#D3D3D3"
        android:hint="@string/username_hint"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account" />

        <EditText
            android:id="@+id/signuppasswordEditText"
            android:layout_width="279dp"
            android:layout_height="39dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="#D3D3D3"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sigupusernameEditText" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:backgroundTint="#ADD8E6"
            android:text="@string/signup"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signuppasswordEditText" />

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fail_login"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/signuppasswordEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="206dp"  />
</androidx.constraintlayout.widget.ConstraintLayout>