<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1">

    <!-- 顶部 Logo 和欢迎文字 -->

    <TextView
        android:id="@+id/elder_assist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elder_a"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/elder_assist"
        android:layout_marginBottom="50dp"/>

    <!-- 下半部分区域 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_bottom_background"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Error Text -->

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Log in"
                android:textColor="@color/colorPrimary"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome" />

            <TextView
                android:id="@+id/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/create_account"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login" />

            <TextView
                android:id="@+id/signUpLinkTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/link"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.876"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login"
                android:layout_marginBottom="30dp"/>

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/username_hint"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/signUpLinkTextView"/>

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/usernameEditText"/>

            <TextView
                android:id="@+id/errorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fail_login"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="0dp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/login_button"
                app:layout_constraintTop_toBottomOf="@+id/errorTextView" />

            <Button
                android:id="@+id/backToHomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Back to Home"
                app:layout_constraintTop_toBottomOf="@+id/loginButton"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
